added  looplab create, share, explore section

--- a/loop-lab-social-theme/index.html
+++ b/loop-lab-social-theme/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
 
         <div class="container">
             <a class="navbar-brand" href="index.html">LoopLab</a>
@@ -31,7 +31,7 @@
             <div id="navbarToggle" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="#home-head-section" class="nav-link">Home</a>
+                        <a href="#home" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="#explore-head-section" class="nav-link">Explore</a>
@@ -47,10 +47,232 @@
         </div>
     </nav>
 
+    <!-- Home content  -->
+
+    <header id="home-section">
+
+        <div class="dark-overlay">
+            <div class="home-inner container">
+                <div class="row">
+                    <div class="col-lg-8 d-none  d-lg-block">
+                        <div class="display-4">
+                            Lorem, ipsum dolor <strong> lorem</strong>Lorem</strong> Lorem, ipsum
+                            dolor.
+                        </div>
+                        <div class="d-flex">
+                            <div class="p-4 align-self-start">
+                                <i class="fas fa-check fa-2x"></i>
+                            </div>
+                            <div class="p-4 align-self-end">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt voluptatum vero quos
+                                dolore eligendi assumenda.
+                            </div>
+                        </div>
+                        <div class="d-flex">
+                            <div class="p-4 align-self-start">
+                                <i class="fas fa-check fa-2x"></i>
+                            </div>
+                            <div class="p-4 align-self-end">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt voluptatum vero quos
+                                dolore eligendi assumenda.
+                            </div>
+                        </div>
+                        <div class="d-flex">
+                            <div class="p-4 align-self-start">
+                                <i class="fas fa-check fa-2x"></i>
+                            </div>
+                            <div class="p-4 align-self-end">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt voluptatum vero quos
+                                dolore eligendi assumenda.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 d-block">
+                        <div class="card bg-primary bg-primary text-center card-form">
+                            <div class="card-body">
+                                <h3>Sign up today</h3>
+                                <p>Fill this form to register</p>
+                                <form action="">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control form-contrl-lg" placeholder="Username">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" class="form-control form-contrl-lg" placeholder="Email">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" class="form-control form-contrl-lg"
+                                            placeholder="Password">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" class="form-control form-contrl-lg"
+                                            placeholder="Confirm-password">
+                                    </div>
+                                    <input type="button" class="btn btn-outline-light btn-block" value="Submit">
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- explore section  -->
+
+    <section id="explore-head-section" class="my-5">
+        <div class=" container">
+            <div class="row">
+                <div class="col text-center">
+                    <h2>Explore</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam facere ducimus nobis fugiat
+                        distinctio voluptates similique, voluptas itaque doloribus eos.</p>
+                    <a href="#" class="btn btn-outline-light">Find out more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="explore-section" class="bg-white text-muted py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 align-self-center">
+                    <img class="mb-3 img img-fluid rounded-circle"
+                        src="../boiler-plate/image/looplab/explore-section1.jpg" alt="">
+                </div>
+                <div class="col-md-6">
+                    <h2 class="dislay-4">Explore & connect</h2>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quaerat temporibus
+                        ipsam,
+                        recusandae reprehenderit ex? Consequuntur ratione cumque voluptates reprehenderit!</p>
+                    <div class="d-flex">
+                        <div class="align-self-start p-4">
+
+                            <i class="fas fa-check fa-2x"></i>
+                        </div>
+                        <div class="p-4  align-self-end">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos aperiam deleniti aut
+                            harum voluptatum esse voluptas fugit dolores ipsa laboriosam?
+                        </div>
+                    </div>
+                    <div class="d-flex">
+                        <div class="align-self-start p-4">
+
+                            <i class="fas fa-check fa-2x"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos aperiam deleniti aut
+                            harum voluptatum esse voluptas fugit dolores ipsa laboriosam?
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- craete section  -->
+
+    <section id="create-head-section" class="p-4 bg-primary">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <h2 class="display-4">Create</h2>
+                    <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat minima sapiente
+                        unde
+                        praesentium? Illo, non quidem. Ipsa voluptates pariatur voluptatum.</p>
+                    <a href="#" class="btn btn-outline-light">Create</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- create section  -->
+
+    <section id="create-section">
+        <div class="container py-4">
+            <div class="row">
+                <div class="col-md-6 order-1">
+                    <img src="../boiler-plate/image/looplab/create-section1.jpg" class="img img-fluid rounded-circle"
+                        alt="">
+                </div>
+                <div class="col-md-6">
+                    <h2>Create Your passion</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt animi quia et blanditiis nam
+                        libero maxime voluptate similique quae! Ullam.</p>
+                    <div class="d-flex">
+                        <div class="align-self-start p-4">
+                            <i class="fas fa-check fa-2x"></i>
+                        </div>
+                        <div class="align-self-end p-4">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident necessitatibus cupiditate
+                            fugit delectus porro nisi deleniti quibusdam repudiandae aperiam mollitia!
+                        </div>
+                    </div>
+                    <div class="d-flex">
+                        <div class="align-self-start p-4">
+                            <i class="fas fa-check fa-2x"></i>
+                        </div>
+                        <div class="align-self-end p-4">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident necessitatibus cupiditate
+                            fugit delectus porro nisi deleniti quibusdam repudiandae aperiam mollitia!
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
+    <!-- share section  -->
 
+    <section id="share-head-section" class="bg-primary p-4">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <h2 class="display-4">Share</h2>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate neque iure iusto
+                        cum mollitia suscipit omnis at repellat, molestiae cupiditate!</p>
+                    <a href="#" class="btn btn-outline-light">Find out more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- share section  -->
+
+    <section id="share-section" class="bg-white py-4 text-muted">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="../boiler-plate/image/looplab/share-section1.jpg" class="img img-fluid rounded-circle"
+                        alt="">
+                </div>
+                <div class="col-md-6">
+                    <h2>Share What You Create</h2>
+                    <p class="lead"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque labore, rem ducimus
+                        ex possimus earum nobis obcaecati animi nesciunt corporis.</p>
+                    <div class="d-flex">
+                        <div class="self-align-start p-4">
+                            <i class="fas fa-check fa-2x"></i>
+                        </div>
+                        <div class="self-align-end p-4">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat magnam eum non aspernatur
+                            ad dolore sint recusandae perspiciatis corrupti eius!
+                        </div>
+                    </div>
+                    <div class="d-flex">
+                        <div class="self-align-start p-4">
+                            <i class="fas fa-check fa-2x"></i>
+                        </div>
+                        <div class="self-align-end p-4">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat magnam eum non aspernatur
+                            ad dolore sint recusandae perspiciatis corrupti eius!
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
