--- a/loop-lab-social-theme/index.html
+++ b/loop-lab-social-theme/index.html
@@ -274,6 +274,60 @@
         </div>
     </section>
 
+
+    <!-- footer  -->
+
+    <section id="footer-section">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center py-4">
+                    <h3>LoopLab</h3>
+                    <p>Copyright @<span id="date"></span></p>
+                    <button class="btn btn-primary" data-toggle="modal" data-target="#contactModal">Contact us</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- contact modal -->
+    <div class="modal fade text-dark" id="contactModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+
+                    <h4 class="modal-title">Contact us</h4>
+                    <button class="close" data-dismiss="modal">
+                        <span>&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form action="">
+                        <div class="form-group">
+                            <label for="firstName">Name</label>
+                            <input type="text" id="firstName" name="firstname" class="form-control" placeholder="Name">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="text" id="email" name="email" class="form-control" placeholder="Email">
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <input type="text" id="message" name="message" class="form-control" placeholder="Message">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button class=" btn btn-primary" data-dismiss="modal">Close</button>
+                    <button class="btn btn-primary">Submit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
@@ -286,3 +340,7 @@
 </body>
 
 </html>
+
+<script>
+    $('#date').text(new Date().getFullYear())
+</script>
