--- a/loop-lab-social-theme/index.html
+++ b/loop-lab-social-theme/index.html
@@ -17,18 +17,14 @@
 
 </head>
 
-<body>
-
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-
+<body data-spy="scroll" data-target="#main-nav" id="home">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" id="main-nav">
         <div class="container">
-            <a class="navbar-brand" href="index.html">LoopLab</a>
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle">
+            <a href="index.html" class="navbar-brand">LoopLAB</a>
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
-            <div id="navbarToggle" class="collapse navbar-collapse">
+            <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a href="#home" class="nav-link">Home</a>
@@ -50,7 +46,6 @@
     <!-- Home content  -->
 
     <header id="home-section">
-
         <div class="dark-overlay">
             <div class="home-inner container">
                 <div class="row">
@@ -119,10 +114,10 @@
 
     <!-- explore section  -->
 
-    <section id="explore-head-section" class="my-5">
+    <section id="explore-head-section">
         <div class=" container">
             <div class="row">
-                <div class="col text-center">
+                <div class="col text-center py-5">
                     <h2>Explore</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam facere ducimus nobis fugiat
                         distinctio voluptates similique, voluptas itaque doloribus eos.</p>
@@ -174,7 +169,7 @@
     <section id="create-head-section" class="p-4 bg-primary">
         <div class="container text-center">
             <div class="row">
-                <div class="col">
+                <div class="col py-5">
                     <h2 class="display-4">Create</h2>
                     <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat minima sapiente
                         unde
@@ -225,10 +220,10 @@
 
     <!-- share section  -->
 
-    <section id="share-head-section" class="bg-primary p-4">
+    <section id="share-head-section" class="bg-primary">
         <div class="container text-center">
             <div class="row">
-                <div class="col">
+                <div class="col py-5">
                     <h2 class="display-4">Share</h2>
                     <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate neque iure iusto
                         cum mollitia suscipit omnis at repellat, molestiae cupiditate!</p>
@@ -337,10 +332,29 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
+    <script>
+        $('#date').text(new Date().getFullYear())
+
+        // Init Scrollspy
+        $('body').scrollspy({ target: '#main-nav' });
+
+        // Smooth Scrolling
+        $("#main-nav a").on('click', function (event) {
+            if (this.hash !== "") {
+                event.preventDefault();
+
+                const hash = this.hash;
+
+                $('html, body').animate({
+                    scrollTop: $(hash).offset().top
+                }, 800, function () {
+
+                    window.location.hash = hash;
+                });
+            }
+        });
+
+    </script>
 </body>
 
 </html>
-
-<script>
-    $('#date').text(new Date().getFullYear())
-</script>
