authors section is added

--- a/mizuxe/index.html
+++ b/mizuxe/index.html
@@ -50,6 +50,287 @@
 
     </nav>
 
+    <!-- Showcase  -->
+    <section id="showcase" class="py-5">
+
+        <div class="primary-overlay text-white">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 text-center">
+                        <h1 class="display-3 mt-5 py-5">
+                            Do What Yout Dream of ...
+                        </h1>
+                        <p class="lead">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti quisquam eum
+                        </p>
+                        <a href="" class="btn btn-outline-secondary btn-lg text-white">
+                            <i class="fas fa-arrow-right"></i>
+                        </a>
+                    </div>
+                    <div class="col-lg-6">
+                        <img src="../boiler-plate/image/mizuxe/book.png" class="img  img-fluid d-none d-lg-block"
+                            alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <!-- News letters   -->
+    <section id="newsletter" class="bg-dark text-white py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <input type="text" class="form-control form-contrl-lg mb-resp" placeholder="Enter name">
+                </div>
+                <div class="col-md-4">
+                    <input type="text" class="form-control form-contrl-lg mb-resp" placeholder="Enter Email">
+                </div>
+                <div class="col-md-4">
+                    <button class="btn btn-primary btn-lg btn-block">
+                        <i class="fas fa-envalope-open-o"></i>Subscribe
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- boxes  -->
+    <section id="boxes" class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="card text-conter border-primary mb-resp">
+                        <div class="card-body">
+                            <h3 class="text-primary">
+                                Be better
+                            </h3>
+                            <p class="text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
+                                distinctio.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 ">
+                    <div class="card text-conter border-primary mb-resp bg-primary text-light">
+                        <div class="card-body">
+                            <h3>
+                                Be smater
+                            </h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
+                                distinctio.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card text-conter border-primary mb-resp">
+                        <div class="card-body">
+                            <h3 class="text-primary">
+                                Be stronger
+                            </h3>
+                            <p class="text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
+                                distinctio.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card text-conter border-primary mb-resp bg-primary text-white">
+                        <div class="card-body ">
+                            <h3>
+                                Be faster
+                            </h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
+                                distinctio.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- about why section  -->
+    <section id="about" class="py-5 text-center bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="info-header mb-5">
+                        <h1 class="text-primary pb-3">
+                            Why this book?
+                        </h1>
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque ab </p>
+                    </div>
+
+                    <!-- accordann  -->
+
+                    <div id="accordion">
+                        <div class="card">
+                            <div class="card-header">
+                                <h5 class="mb-0">
+                                    <div href="#collapse1" data-toggle="collapse" data-parent="#accordion">
+                                        <i class="fas fa-arrow-down"></i> Get inspire
+                                    </div>
+                                </h5>
+                            </div>
+                            <div id="collapse1" class="collapse show">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis magni eos
+                                    debitis deleniti dicta quos commodi id omnis at, sapiente possimus distinctio,
+                                    eaque, quisquam cupiditate quas impedit vero praesentium consequuntur voluptatibus
+                                    quo a rem eum officiis? Officiis, itaque a deserunt reprehenderit, ea at molestias
+                                    totam et corrupti earum necessitatibus placeat.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                <h5 class="mb-0">
+                                    <div href="#collapse2" data-toggle="collapse" data-parent="#accordion">
+                                        <i class="fas fa-arrow-down"></i> Get Learn
+                                    </div>
+                                </h5>
+                            </div>
+                            <div id="collapse2" class="collapse">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis magni eos
+                                    debitis deleniti dicta quos commodi id omnis at, sapiente possimus distinctio,
+                                    eaque, quisquam cupiditate quas impedit vero praesentium consequuntur voluptatibus
+                                    quo a rem eum officiis? Officiis, itaque a deserunt reprehenderit, ea at molestias
+                                    totam et corrupti earum necessitatibus placeat.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                <h5 class="mb-0">
+                                    <div href="#collapse3" data-toggle="collapse" data-parent="#accordion">
+                                        <i class="fas fa-arrow-down"></i> Gain the knowledge
+                                    </div>
+                                </h5>
+                            </div>
+                            <div id="collapse3" class="collapse">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis magni eos
+                                    debitis deleniti dicta quos commodi id omnis at, sapiente possimus distinctio,
+                                    eaque, quisquam cupiditate quas impedit vero praesentium consequuntur voluptatibus
+                                    quo a rem eum officiis? Officiis, itaque a deserunt reprehenderit, ea at molestias
+                                    totam et corrupti earum necessitatibus placeat.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+    <!-- meet the authors  -->
+
+
+    <section id="authors">
+        <div class="container py-5">
+            <div class="row mb-5">
+                <div class="col text-center">
+                    <div class="info-header">
+
+                        <h3 class="text-primary">Meet the authors</h3>
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias nulla error
+                            pariatur
+                            obcaecati
+                            repellendus unde!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div class="card mb-5">
+                        <div class="card-body text-center">
+                            <img src="../boiler-plate/image/mizuxe/person1.jpg" alt=""
+                                class="img img-fluid rounded-circle">
+                            <h3>Susen Willims</h3>
+                            <p class="lead ">Lead writer </p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, blanditiis? Sapiente
+                                harum
+                                nisi odit error</p>
+
+                            <div class="d-flex justify-content-center">
+                                <a href="https://facebook.com"><i class="fab fa-facebook"></i></a>
+                                <a href="https://twitter.com"><i class="i fab fa-twitter"></i></a>
+                                <a href="https://instagram.com"><i class="i fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="card mb-5">
+                        <div class="card-body text-center">
+                            <img src="../boiler-plate/image/mizuxe/person2.jpg" alt=""
+                                class="img img-fluid rounded-circle">
+                            <h3>Susen Willims</h3>
+                            <p class="lead ">Lead writer </p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, blanditiis? Sapiente
+                                harum
+                                nisi odit error</p>
+
+                            <div class="d-flex justify-content-center">
+                                <a href="https://facebook.com"><i class="fab fa-facebook"></i></a>
+                                <a href="https://twitter.com"><i class="i fab fa-twitter"></i></a>
+                                <a href="https://instagram.com"><i class="i fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="card mb-5">
+                        <div class="card-body text-center">
+                            <img src="../boiler-plate/image/mizuxe/person3.jpg" alt=""
+                                class="img img-fluid rounded-circle">
+                            <h3>Susen Willims</h3>
+                            <p class="lead ">Lead writer </p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, blanditiis? Sapiente
+                                harum
+                                nisi odit error</p>
+
+                            <div class="d-flex justify-content-center">
+                                <a href="https://facebook.com"><i class="fab fa-facebook"></i></a>
+                                <a href="https://twitter.com"><i class="i fab fa-twitter"></i></a>
+                                <a href="https://instagram.com"><i class="i fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="card mb-5">
+                        <div class="card-body text-center">
+                            <img src="../boiler-plate/image/mizuxe/person4.jpg" alt=""
+                                class="img img-fluid rounded-circle">
+                            <h3>Susen Willims</h3>
+                            <p class="lead ">Lead writer </p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, blanditiis? Sapiente
+                                harum
+                                nisi odit error</p>
+
+                            <div class="d-flex justify-content-center">
+                                <a href="https://facebook.com"><i class="fab fa-facebook"></i></a>
+                                <a href="https://twitter.com"><i class="i fab fa-twitter"></i></a>
+                                <a href="https://instagram.com"><i class="i fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- CONTACT  -->
+
+
+
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
