--- a/mizuxe/index.html
+++ b/mizuxe/index.html
@@ -17,10 +17,10 @@
 
 </head>
 
-<body>
+<body id="home" data-spy="scroll" data-target="#main-nav">
 
 
-    <nav class="navbar navbar-expand-md bg-light navbar-light fixed-top p-4">
+    <nav class="navbar navbar-expand-md bg-light navbar-light fixed-top p-4" id="main-nav">
 
         <div class="container">
             <a href="#home" class="navbar-brand">
@@ -79,7 +79,7 @@
 
 
     <!-- News letters   -->
-    <section id="newsletter" class="bg-dark text-white py-4">
+    <section id="newsletter" class="bg-dark text-white py-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -328,8 +328,61 @@
 
 
     <!-- CONTACT  -->
+    <div id="contact" class="bg-light py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-9">
+                    <h3>Get in touch</h3>
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur blanditiis dicta commodi!
+                        Alias, voluptates et.
+                    </p>
+                    <form>
+                        <div class="input-group input-group-lg mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="fas fa-user"></i>
+                                </span>
+                            </div>
+                            <input type="text" class="form-control" placeholder="Name">
+                        </div>
+                        <div class="input-group input-group-lg mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="fas fa-envelope"></i>
+                                </span>
+                            </div>
+                            <input type="text" class="form-control" placeholder="Email">
+                        </div>
+                        <div class="input-group input-group-lg mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="fas fa-pencil-alt"></i>
+                                </span>
+                            </div>
+                            <textarea type="text" class="form-control" placeholder="Message" rows="5"></textarea>
+                        </div>
+                        <input type="submit" value="Submit" class="btn btn-primary btn-block btn-lg">
+                    </form>
+                </div>
+                <div class="col-lg-3">
+                    <img src="../boiler-plate/image/mizuxe/mlogo.png" alt="" class="align-self-center img img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <!-- footerr  -->
 
+    <footer id="main-footer" class="bg-primary text-white">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-6 ml-auto">
+                    <p class="lead py-2 my-0">Copy right @<span id="year"></span></p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"
@@ -341,6 +394,31 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
+
+    <script>
+        $('#year').text((new Date().getFullYear()))
+
+        // smooth scrolling 
+
+        $('body').scrollspy({ target: '#main-nav' })
+
+        // smooth scrolling
+
+        $('#main-nav a').on('click', function (e) {
+            if (this.hash !== '') {
+                e.preventDefault()
+                const hash = this.hash
+
+                $('html,body').animate({
+                    scrollTop: $(hash).offset().top
+                }, 800, function () {
+                    window.location.hash = hash
+                })
+            }
+        })
+
+
+    </script>
 </body>
 
 </html>
