video modal and   <section id=gallery class=py-5>

--- a/glozzom/index.html
+++ b/glozzom/index.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css"
+        integrity="sha512-Velp0ebMKjcd9RiCoaHhLXkR1sFoCCWXNp6w4zj1hfMifYB5441C+sKeBl/T/Ka6NjBiRfBBQRaQq65ekYz3UQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 
@@ -99,6 +101,184 @@
     </section>
 
 
+    <!-- home icon section  -->
+    <section id="home-icon" class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 text-center">
+                    <i class="fas fa-cog fa-3x mb-2"></i>
+                    <h3>
+                        Turning Gears
+                    </h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil aliquam assumenda cum rem quo
+                        ullam!</p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <i class="fas fa-cloud fa-3x mb-2"></i>
+                    <h3>
+                        Making money
+                    </h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil aliquam assumenda cum rem quo
+                        ullam!</p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <i class="fas fa-cart-plus fa-3x mb-2"></i>
+                    <h3>
+                        Sending data
+                    </h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil aliquam assumenda cum rem quo
+                        ullam!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- heading sectino  -->
+
+    <section id="home-section">
+        <div class="dark-overlay">
+            <div class="row">
+                <div class="col">
+                    <div class="container pt-5">
+                        <h1>
+                            Are You Ready To Get Started?
+                        </h1>
+                        <p class="lead d-none d-md-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. At,
+                            neque? Quos quas
+                            unde
+                            consequuntur excepturi voluptate molestiae! Sint, accusamus quae.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- info section  -->
+
+    <section id="info py-3">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 align-self-center">
+                    <h3>Lorem, ipsum.</h3>
+                    <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero debitis id illo
+                        explicabo! Nobis
+                        sit, sunt beatae perspiciatis nisi tempore.</p>
+                    <a href="" class="btn btn-outline-danger">
+                        Learn more
+                    </a>
+                </div>
+                <div class="col-md-6">
+                    <img src="../boiler-plate/image/glozzom/laptop.png" class="img img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- video play -->
+
+    <section id="video-play">
+        <div class="dark-overlay">
+            <div class="row">
+                <div class="col">
+                    <div class="container p-5">
+
+                        <a href="" class="video" data-video="https://www.youtube.com/embed/HnwsG9a5riA"
+                            data-toggle="modal" data-target="#videoModal">
+
+                            <i class="fas fa-play fa-3x"></i>
+                        </a>
+                        <h3>See What We Do</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- photo gallerty  -->
+    <section id="gallery" class="py-5">
+        <div class="container">
+            <h1 class="text-center">Photo Gallery</h1>
+            <p class="text-center">Check out our photos</p>
+            <div class="row mb-4">
+                <div class="col-md-4">
+                    <a href="https://source.unsplash.com/random/560x560" data-toggle="lightbox"
+                        data-gallery="img-gallery" data-height="560" data-width="560">
+                        <img src="https://source.unsplash.com/random/560x560" alt="" class="img-fluid">
+                    </a>
+                </div>
+
+                <div class="col-md-4">
+                    <a href="https://source.unsplash.com/random/561x561" data-toggle="lightbox"
+                        data-gallery="img-gallery" data-height="561" data-width="561">
+                        <img src="https://source.unsplash.com/random/561x561" alt="" class="img-fluid">
+                    </a>
+                </div>
+
+                <div class="col-md-4">
+                    <a href="https://source.unsplash.com/random/562x562" data-toggle="lightbox"
+                        data-gallery="img-gallery" data-height="562" data-width="562">
+                        <img src="https://source.unsplash.com/random/562x562" alt="" class="img-fluid">
+                    </a>
+                </div>
+            </div>
+
+            <div class="row mb-4">
+                <div class="col-md-4">
+                    <a href="https://source.unsplash.com/random/563x563" data-toggle="lightbox"
+                        data-gallery="img-gallery" data-height="563" data-width="563">
+                        <img src="https://source.unsplash.com/random/563x563" alt="" class="img-fluid">
+                    </a>
+                </div>
+
+                <div class="col-md-4">
+                    <a href="https://source.unsplash.com/random/564x564" data-toggle="lightbox"
+                        data-gallery="img-gallery" data-height="564" data-width="564">
+                        <img src="https://source.unsplash.com/random/564x564" alt="" class="img-fluid">
+                    </a>
+                </div>
+
+                <div class="col-md-4">
+                    <a href="https://source.unsplash.com/random/565x565" data-toggle="lightbox"
+                        data-gallery="img-gallery" data-height="565" data-width="565">
+                        <img src="https://source.unsplash.com/random/565x565" alt="" class="img-fluid">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- //news-letter  -->
+
+    <!-- <section id="news-letter" class="text-center p-5 bg-dark text-white">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h3>Sign up for news letter</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, aperiam? Maxime dolorum
+                        vero, quod eius itaque omnis? Labore sapiente aliquam, atque reprehenderit beatae dignissimos
+                        qui.</p>
+                </div>
+            </div>
+        </div>
+    </section> -->
+
+    <!-- video modal  -->
+
+    <div class="modal fade" id="videoModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button class="close" data-dismiss="modal">
+                        <span>&times;</span>
+                    </button>
+                    <iframe src="" frameborder="0" height="350" width="100%"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"
@@ -110,11 +290,31 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"
+        integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
         $('.carousel').carousel({
             interval: 5000,
             pause: 'hover'
+        })
+
+        // light box init
+        $(document).on('click', '[data-toggle="lightbox"]', function (event) {
+            event.preventDefault();
+            $(this).ekkoLightbox();
+        });
+
+
+        // video modal
+        $('.video').click(function () {
+            var theModal = $(this).data('target')
+            let videoSrc = $(this).attr('data-video')
+            let videoSrcAuto = videoSrc + "?modestbranding=1&rel=0&controls=0&showinfo=0&html5=1&autoplay=1"
+            $(theModal + ' iframe').attr('src', videoSrcAuto)
+            $(theModal + ' button.close').click(function () {
+                $(theModal + ' iframe').attr('src', videoSrc);
+            });
         })
     </script>
 
